--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sign_in_with_apple: ^7.0.1
+  google_sign_in: ^6.3.0
   http: ^1.3.0
  
 
