--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sign_in_with_apple: ^7.0.1
   google_sign_in: ^6.3.0
   http: ^1.3.0
+  lottie: ^3.3.1
  
 
 dev_dependencies:
@@ -62,7 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/login_lottie.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
