--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   http: ^1.3.0
   lottie: ^3.3.1
   shared_preferences: ^2.5.3
+  translator: ^1.0.3+1
+  provider: ^6.1.4
+  
+   
  
 
 dev_dependencies:
@@ -57,7 +61,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
