--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^1.1.2
   flutter_dotenv: ^5.2.1
   intl: ^0.20.2
+  google_maps_flutter: ^2.12.1
+  permission_handler: ^12.0.0+1
   
    
  
