--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   intl: ^0.20.2
   google_maps_flutter: ^2.12.1
   permission_handler: ^12.0.0+1
+  google_fonts: ^6.2.1
+  table_calendar: ^3.2.0
+  
   
    
  
