--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   cloud_firestore: ^5.6.7
   flutter_secure_storage: ^9.2.4
   geocoding: ^3.0.0
+  flutter_typeahead: ^5.2.0
   
   
    
